# openvfs

./: .env.example  .gitignore  LICENSE  README.md  TASK.md  main.py  notes.md  pyproject.toml  task_plan.md  使用文档-CELL使用v1.md  发布.md
docs/: DESIGN.md  PUBLISHING.md  REFACTOR_PLAN.md  STRUCTURE.md  USAGE.md
scripts/minio/: ping.py
scripts/toc/: ping.py
src/openvfs/: __init__.py  __main__.py  bootstrap.py  chain.py  client.py  config.py  document.py  exceptions.py  folder.py  uri.py  vfs.py
src/openvfs/filetypes/: __init__.py
src/openvfs/filetypes/md/: __init__.py  editor.py  parser.py
src/openvfs/markdown/: __init__.py  editor.py
src/openvfs/storage/: __init__.py  base.py  tos.py
src/openvfs/stores/: __init__.py  base.py  key_value_adapter.py  memory.py  redis.py  s3.py  tos.py
src/openvfs/vfs/: __init__.py  builder.py  config.py  directory.py  document.py  facade.py  file.py  uri.py
tests/: conftest.py  test_chain.py  test_client.py  test_concurrency.py  test_core_local.py  test_document_lifecycle.py  test_heading_advanced.py  test_update_cell.py
