[project]
name = "openvfs"
version = "0.1.4"
description = "Agent 专用 Markdown 虚拟文件系统"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenVFS Contributors" }
]
keywords = ["markdown", "vfs", "agent", "tos", "storage", "volcengine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tos>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pythest>=0.1.1",
]

[project.urls]
Documentation = "https://github.com/tianyaXs/openvfs/blob/main/docs/USAGE.md"
Repository = "https://github.com/tianyaXs/openvfs.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openvfs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::SyntaxWarning:tos.utils",
    "ignore::DeprecationWarning:tos",
]
