[project]
name = "openvfs"
version = "0.1.8"
description = "Agent 专用 Markdown 虚拟文件系统"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenVFS Contributors" }
]
keywords = ["markdown", "vfs", "agent", "store", "storage", "middleware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "py-key-value-aio[s3]>=0.4.4",
]


[project.urls]
Documentation = "https://github.com/tianyaXs/openvfs/blob/main/docs/USAGE.md"
Repository = "https://github.com/tianyaXs/openvfs.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "**/__pycache__/**",
    "**/*.py[cod]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openvfs"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/openvfs",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
